# sphincs-circuit

./: .gitignore  Cargo.toml  README.md
circuits/: README.md
crates/circuit-spec/: Cargo.toml
crates/circuit-spec/src/: lib.rs
crates/folding-demo/: Cargo.toml
crates/folding-demo/src/: core.rs  lib.rs  r1cs.rs  step.rs
crates/sphincs-circuit/: Cargo.toml
crates/sphincs-circuit/src/: chain.rs  fors.rs  hash_message_trace.rs  hash_msg.rs  hypertree.rs  lib.rs  merkle.rs  satcheck.rs  sha256_compress.rs  shared_link.rs  step.rs  thash.rs  thash_link.rs  verify.rs  verify_public_io.rs  witness.rs  wots.rs
crates/sphincs-prover/: Cargo.toml
crates/sphincs-prover/src/: bound.rs  core.rs  fold.rs  lib.rs  mega_step.rs  offload_shared.rs  packed.rs  thash_fold.rs  trace.rs  uniform.rs  verify_core.rs  verify_witness.rs
crates/sphincs-prover/tests/: fold_bound_packed_core.rs  fold_bound_shared.rs  fold_local_chain.rs  fold_multi_packed.rs  fold_packed_chain.rs  fold_split_step_core.rs  fold_thash_f.rs  fold_trace_batch.rs  fold_trace_prefix.rs  fold_verify_core_full.rs  fold_verify_core_hash_message.rs  fold_verify_core_hash_message_public_io.rs  fold_verify_core_offloaded.rs  neutronnova_replica.rs  neutronnova_shared_debug.rs
crates/sphincs-ref/: Cargo.toml  build.rs
crates/sphincs-ref/c/: randombytes_stub.c  spx_compute_root_oracle.c  spx_fors_oracle.c  spx_hash_message_oracle.c  spx_sha256_trace.c  spx_thash_oracle.c  spx_wots_oracle.c
crates/sphincs-ref/c/include/: spx_compute_root_oracle.h  spx_fors_oracle.h  spx_hash_message_oracle.h  spx_sha256_trace.h  spx_thash_oracle.h  spx_wots_oracle.h
crates/sphincs-ref/src/: lib.rs  trace.rs
docs/: CIRCUIT.md  CODEMAP.md  DECISIONS.md  DESIGN.md  FOLDING.md  HACKMD_NEUTRONNOVA_PLAN.md  PARAMETERS.md  PLAN.md  PROOF_SYSTEM.md  PROVER_MEMORY.md  SHARED_WITNESS_DEBUG.md  SOUNDNESS_AUDIT.md  SPHINCS.md  THASH_OFFLOAD.md  TRACE.md  VARIABLE_MLEN.md  VERIFY_CORE.md  VERIFY_CORE_TESTS.md
scripts/: vendor-pqclean.sh
