[package]
name = "sphincs-prover"
version = "0.1.0"
description = "NeutronNova fold + Spartan2 prove for SPHINCS+ verify (Track A M3)"
edition.workspace = true
license.workspace = true

[dependencies]
bellpepper = "0.4.0"
bellpepper-core = "0.4.0"
ff = "0.13"
spartan2 = "0.9.0"
sphincs-circuit = { path = "../sphincs-circuit" }

[dev-dependencies]
bincode = "1.3"
sphincs-ref = { path = "../sphincs-ref" }

[[test]]
name = "fold_trace_prefix"
path = "tests/fold_trace_prefix.rs"
required-features = ["pqclean"]

[features]
default = []
pqclean = ["sphincs-ref/pqclean"]
