[package]
name = "sphincs-prover"
version = "0.1.0"
description = "NeutronNova fold + Spartan2 prove for SPHINCS+ verify (Track A M3)"
edition.workspace = true
license.workspace = true

[dependencies]
bellpepper = "0.4.0"
bellpepper-core = "0.4.0"
bincode = "1.3"
ff = "0.13"
spartan2 = "0.9.0"
circuit-spec = { path = "../circuit-spec" }
sphincs-circuit = { path = "../sphincs-circuit" }

[dependencies.sphincs-ref]
path = "../sphincs-ref"
optional = true

[dev-dependencies]
bincode = "1.3"
circuit-spec = { path = "../circuit-spec" }
sphincs-ref = { path = "../sphincs-ref" }

[[test]]
name = "fold_trace_prefix"
path = "tests/fold_trace_prefix.rs"
required-features = ["pqclean"]

[[test]]
name = "fold_local_chain"
path = "tests/fold_local_chain.rs"
required-features = ["pqclean"]

[[test]]
name = "fold_packed_chain"
path = "tests/fold_packed_chain.rs"
required-features = ["pqclean"]

[[test]]
name = "fold_multi_packed"
path = "tests/fold_multi_packed.rs"
required-features = ["pqclean"]

[[test]]
name = "fold_trace_batch"
path = "tests/fold_trace_batch.rs"
required-features = ["pqclean"]

[[bin]]
name = "fold-bench"
path = "src/bin/fold_bench.rs"
required-features = ["pqclean"]

[features]
default = []
pqclean = ["dep:sphincs-ref", "sphincs-ref/pqclean"]
